# shizen

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
components/: Cargo.toml
components/src/: delay.rs  gain.rs  lib.rs
components/tests/: gain.rs
plugin-config/: Cargo.toml  example.conf.json  plugin.conf.toml
plugin-config/src/: builder.rs  lib.rs  plugin_type.rs
plugin-config/tests/: builder.rs  write_conf.rs
shizen/: Cargo.toml
shizen-buffers/: Cargo.toml
shizen-buffers/src/: lib.rs
shizen-buffers/src/audio/: audio_buffer.rs  audio_processor.rs
shizen-buffers/src/midi/: midi_buffer.rs  midi_message.rs
shizen-buffers/tests/: audio.rs  midi.rs
shizen-components/: Cargo.toml
shizen-components/src/: delay.rs  gain.rs  lib.rs
shizen-components/tests/: gain.rs
shizen-config/: Cargo.toml  README.md  Shizen.toml
shizen-config/src/: enums.rs  lib.rs  plugin_metadata.rs
shizen-config/tests/: builder.rs  read_config.rs  write_conf.rs
shizen-macros/: Cargo.toml
shizen-macros/src/: ast.rs  attr.rs  bindings.rs  lib.rs  utils.rs
shizen-macros/tests/: config.rs  plugin.conf.toml
shizen-vst-template/: Cargo.toml
shizen-vst-template/src/: lib.rs
shizen/src/: lib.rs
shizen/src/buffer/: mod.rs
shizen/src/buffer/audio/: audio_buffer.rs  audio_iterator.rs  audio_iterator_ext.rs  audio_processor.rs  channel_type.rs  mod.rs
shizen/src/buffer/midi/: midi_buffer.rs  midi_message.rs  midi_processor.rs  mod.rs
shizen/src/buffer/processor/: mod.rs
shizen/src/buffers/: mod.rs
shizen/src/buffers/audio/: audio_buffer.rs  channel_type.rs  mod.rs
shizen/src/buffers/midi/: midi_buffer.rs  midi_message.rs  mod.rs
shizen/src/components/: delay.rs  gain.rs  mod.rs
shizen/src/errors/: mod.rs
shizen/src/plugin/: mod.rs  vst_context.rs
shizen/tests/: audio.rs  audio_iterator.rs  gain_vst.rs  midi.rs
shizen_macros/: Cargo.toml
shizen_macros/src/: attr.rs  lib.rs
