[workspace]
members = ["shizen*/", "plugin-config/", "components/"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A better way to create VSTs."
repository = "https://github.com/fruit-bird/shizen"
keywords = ["vst"]
categories = ["audio-processing"]
license = "MIT OR Apache-2.0"
