[package]
name = "plugin-config"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"

[shizen.metadata]
categories = ["Effect", "Utility", "MIDI"]
vendor = "Shizen Technologies"
plugin_type = "effect"
