[package]
name = "shizen-components"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shizen-buffers = { version = "*", path = "../shizen-buffers" }
shizen-macros = { version = "*", path = "../shizen-macros" }

[dev-dependencies]
rand = "0.8.5"
rayon = "1.10.0"
