[package]
name = "shizen-config"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.15"

[shizen.metadata]
categories = ["Effect", "Utility", "MIDI"]
vendor = "Shizen Technologies"
plugin_type = "effect"
