[package]
name = "shizen-config"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.204", defult-features = false, features = ["derive"] }

[shizen.metadata]
vendor = "Shizen Technologies"
categories = ["effect", "utility", "midi"]
plugin-type = "instrument"
