[package]
name = "shizen-config"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
