[package]
name = "shizen-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
derive_more = "0.99.17"
plugin-config = { version = "0.1.0", path = "../plugin-config" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
shizen = { version = "0.1.0", path = "../shizen" }
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
