[package]
name = "shizen-macros"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
components = { version = "*", path = "../components" }
plugin-config = { version = "*", path = "../plugin-config" }
proc-macro2 = "1.0.86"
quote = "1.0.36"
shizen = { version = "*", path = "../shizen" }
syn = { version = "2.0.71", features = ["full", "extra-traits"] }
