[package]
name = "shizen-macros"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
shizen-config = { version = "0.1.1", path = "../shizen-config" }
shizen-buffers = { version = "0.1.1", path = "../shizen-buffers" }
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
# vst3-sys = { version = "0.1.0", git = "https://github.com/RustAudio/vst3-sys/" }
