[package]
name = "shizen"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
shizen-buffers = { version = "0.1.1", path = "../shizen-buffers" }
shizen-components = { version = "0.1.1", path = "../shizen-components", optional = true }
shizen-config = { version = "0.1.1", path = "../shizen-config", optional = true }
shizen-macros = { version = "0.1.1", path = "../shizen-macros" }

[features]
default = []
components = ["dep:shizen-components"]
config = ["dep:shizen-config"]

[dev-dependencies]
shizen = { path = ".", features = ["components"] }
